k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bytebattle-devops
  labels:
    app.kubernetes.io/name: bytebattle
    app.kubernetes.io/part-of: bytebattle-platform
